2002-11-16  James Henstridge  <james@daa.com.au>

	* pygobject.c (pygobject_connect_object): set up closure
	correctly.  Fix from bug #96922.
	(pygobject_connect_object_after): and here.

	* gtk/gtk.override (_wrap_gtk_text_view_buffer_to_window_coords):
	(_wrap_gtk_text_view_window_to_buffer_coords): wrap functions.

	* pango.override: fix up calls to pyg_enum_get_value() so that it
	doesn't throw an exception when it shouldn't.
	(_wrap_pango_layout_get_pixel_extents): call get_pixel_extents()
	like it is supposed to.  Fixes bug #93569.

	* pygtype.c (pyg_value_from_pyobject): if python object is None,
	set GValue to NULL for boxed, pointer and GObject types.
	(pyg_value_as_pyobject): convert G_TYPE_POINTER values to
	gobject.GPointer python objects.
	(pyg_value_as_pyobject): when converting G_TYPE_BOOLEAN values to
	python objects, return one of Py_True or Py_False, so that Python
	2.3 will return an instance of bool.

	From patch on bug #96950

	* gtk/gdk.override (_wrap_gdk_pixbuf_save): wrapper for
	GdkPixbuf.save()

	* codegen/argtypes.py (GdkRectanglePtrArg.write_param): handle
	GdkRectangle args with (null-ok) set.

	* gtk/gtk.defs (gtk.Style.paint_*): allow passing None for area,
	widget and detail arguments.

	* codegen/docgen.py (DocbookDocWriter.write_method): wrap
	<methodsynopsis> in a <programlisting> element.
	(DocbookDocWriter.write_constructor): same here.
	(DocbookDocWriter.write_params): wrap parameter description in a
	<simpara> element to conform to docbook DTD better.
	(DocbookDocWriter.write_params): add colon to end of terms, like
	in gtk-doc output.

	* docs/pygtk-docs.xsl: small changes to produce output more
	similar to new gtk-doc output.

2002-11-15  James Henstridge  <james@daa.com.au>

	* pango.defs (PangoContext.get_metrics): caller owns return value.

	* gtk/gtk.defs (GtkEntry.set_position): remove function, as it is
	deprecated and shadows the recommended API.

2002-11-11  Johan Dahlin  <jdahlin@telia.com>
