@@ -61,22 +61,7 @@ AC_DISABLE_STATIC
 AC_LIBTOOL_WIN32_DLL
 AC_PROG_LIBTOOL
 
-dnl AM_PATH_PYTHON(2.2)
-AM_PATH_PYTHON
-AC_MSG_CHECKING(for python >= 2.2)
-prog="
-import sys, string
-minver = (2,2,0,'final',0)
-if sys.version_info < minver:
-  sys.exit(1)
-sys.exit(0)"
-if $PYTHON -c "$prog" 1>&AC_FD_CC 2>&AC_FD_CC
-then
-  AC_MSG_RESULT(okay)
-else
-  AC_MSG_ERROR(too old)
-fi
-
+AM_PATH_PYTHON(2.2)
 
 AM_CHECK_PYTHON_HEADERS(,[AC_MSG_ERROR(could not find Python headers)])
 
