@@ -1,3 +1,10 @@
+2002-11-18  James Henstridge  <james@daa.com.au>
+
+	* gobjectmodule.c (pyg_idle_add): add a wrapper for g_idle_add.
+	(pyg_timeout_add): and a wrapper for g_timeout_add.
+	(pyg_io_add_watch): and a wrapper for g_io_add_watch.
+	(initgobject): add constants.
+
 2002-11-16  James Henstridge  <james@daa.com.au>
 
 	* pygobject.c (pygobject_connect_object): set up closure
